Source/WebKit/GPUProcess/media/RemoteMediaPlayerManagerProxy.cpp
@@ -55,6 +55,10 @@ RemoteMediaPlayerManagerProxy::RemoteMediaPlayerManagerProxy(GPUConnectionToWebP
 
 RemoteMediaPlayerManagerProxy::~RemoteMediaPlayerManagerProxy()
 {
+    auto proxies = std::exchange(m_proxies, { });
+
+    for (auto& proxy : proxies.values())
+        proxy->invalidate();
 }
 
 void RemoteMediaPlayerManagerProxy::createMediaPlayer(MediaPlayerIdentifier identifier, MediaPlayerEnums::MediaEngineIdentifier engineIdentifier, RemoteMediaPlayerProxyConfiguration&& proxyConfiguration)
